objects/Site_Contact__c.object
<CustomObject>
    <description>Allows multiple contacts to be associated to a ServiceMax Location and a contact be associated with multiple locations.</description>
    <fields>
        <fullName>Contact_Account__c</fullName>
        <formula>Site_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Site_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Site Contacts</relationshipLabel>
        <relationshipName>Site_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Contacts</relationshipLabel>
        <relationshipName>Site_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Site_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Site Contact</label>
    <nameField>
        <displayFormat>SiteContact-{0000000000}</displayFormat>
        <label>Site Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>